# vortex-mobile

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
composeApp/: Cargo.toml  build.gradle.kts
composeApp/src/androidMain/kotlin/xyz/mcxross/vortex/: MainActivity.kt  VortexStore.android.kt
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/commonMain/kotlin/xyz/mcxross/vortex/: App.kt
composeApp/src/commonMain/kotlin/xyz/mcxross/vortex/ui/: Colors.kt
composeApp/src/commonMain/kotlin/xyz/mcxross/vortex/ui/components/: Components.kt
composeApp/src/commonMain/kotlin/xyz/mcxross/vortex/utils/: Bcs_.kt  Consts.kt
composeApp/src/commonMain/kotlin/xyz/mcxross/vortex/vortex/: VortexClient.kt  VortexStore.kt  VortexTypes.kt
composeApp/src/commonMain/rust/: bindings.rs  constants.rs  lib.rs
composeApp/src/commonMain/rust/keys/: verification_key.hex
composeApp/src/commonMain/rust/wasm/: mod.rs
composeApp/src/commonTest/kotlin/xyz/mcxross/vortex/: ComposeAppCommonTest.kt
composeApp/src/iosMain/kotlin/xyz/mcxross/vortex/: MainViewController.kt  VortexStore.ios.kt
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
