[package]
name = "vortex"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]
path = "src/commonMain/rust/lib.rs"

[dependencies]
anyhow = "1.0.98"
ark-bn254 = "0.5.0"
ark-crypto-primitives = { version = "0.5.0", features = [
    "crh",
    "r1cs",
    "merkle_tree",
] }
ark-ff = "0.5.0"
ark-groth16 = "0.5.0"
ark-r1cs-std = "0.5.0"
ark-relations = "0.5.0"
ark-serialize = "0.5.0"
ark-std = "0.5.0"
console_error_panic_hook = "0.1.7"
hex = "0.4.3"
rand_chacha = "0.3"
rand_core = "0.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
wasm-bindgen = "0.2.100"
num-bigint = "0.4"
num-traits = "0.2"
uniffi = "0.29.4"
android_logger = "0.15.1"
log = "0.4.29"
lazy_static = "1.5.0"
thiserror = "2.0.17"

[[bin]]
name = "keygen"
path = "src/commonMain/rust/bin/keygen.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.release.package.wasm-bindgen]
opt-level = 3
